# Poetic-Calendar

./: BRIEF.md  README.md  engineering.md  product.md  ui.md
.agent/design/: pm-design-doc.md
backend/: main.py  prompts.py  pyproject.toml
frontend/: app.js  index.html  style.css
tests/: test_backend.py
